--- a/index.html
+++ b/index.html
@@ -5,8 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+   <nav>
+       <div class="logo"></div>
+       <ul>
+           <li><a href="#"></a>Menu 1</li>
+           <li><a href="#"></a>Menu 2</li>
+           <li><a href="#"></a>Menu 3</li>
+           <li><a href="#"></a>Menu 4</li>
+       </ul>
+   </nav> 
 </body>
 </html>
