--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
    <nav>
        <div class="logo"></div>
        <ul>
-           <li><a href="#"></a>Menu 1</li>
-           <li><a href="#"></a>Menu 2</li>
-           <li><a href="#"></a>Menu 3</li>
-           <li><a href="#"></a>Menu 4</li>
+           <li><a href="#">Menu 1</a></li>
+           <li><a href="#">Menu 2</a></li>
+           <li><a href="#">Menu 3</a></li>
+           <li><a href="#">Menu 4</a></li>
        </ul>
    </nav> 
 </body>
